[metadata]
name = qiskit-terra
author = Qiskit Development Team
author_email = qiskit@qiskit.org
license = Apache 2.0
description = Software for developing quantum computing programs
keywords = qiskit, sdk, quantum
url = https://github.com/Qiskit/qiskit-terra
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Environment :: Console
    License :: OSI Approved :: Apache Software License
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Operating System :: Microsoft :: Windows
    Operating System :: MacOS
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering

project_urls = 
    Bug Tracker = https://github.com/Qiskit/qiskit-terra/issues
    Documentation = https://qiskit.org/documentation/
    Source Code = https://github.com/Qiskit/qiskit-terra

[options]
packages = find:
zip_safe = False
setup_requires = Cython>=0.27.1
install_requires =
    jsonschema>=2.6
    networkx>=2.2;python_version>'3.5'
    # Networkx 2.4 is the final version with python 3.5 support.
    networkx>=2.2,<2.4;python_version=='3.5'
    retworkx>=0.3.2
    numpy>=1.17
    ply>=3.10
    psutil>=5
    scipy>=1.4
    sympy>=1.3
    dill>=0.3
    fastjsonschema>=2.10
    python-constraint>=1.4
    python-dateutil>=2.8.0
include_package_data = True
python_requires = >=3.5

[optionspackages.find]
exclude = test*

[options.extras_require]
visualization =
    matplotlib>=2.1
    ipywidgets>=7.3.0
    pydot
    pillow>=4.2.1
    pylatexenc>=1.4
    seaborn>=0.9.0
    pygments>=2.4
full-featured-simulators = qiskit-aer>=0.1
crosstalk-pass = z3-solver>=4.7
