[package]
name = "qiskit-accelerate"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "qiskit_accelerate"
doctest = false

[lints]
workspace = true

[dependencies]
rayon.workspace = true
numpy.workspace = true
rand.workspace = true
rand_pcg.workspace = true
rand_distr.workspace = true
ahash.workspace = true
num-traits.workspace = true
num-complex.workspace = true
rustworkx-core.workspace = true
num-bigint.workspace = true
faer = "0.19.4"
itertools.workspace = true
qiskit-circuit.workspace = true
thiserror.workspace = true
ndarray-einsum = "0.8.0"
rustiq-core = "0.0.11"
bytemuck.workspace = true
nalgebra.workspace = true

[dependencies.smallvec]
workspace = true
features = ["union"]

[dependencies.pyo3]
workspace = true
features = ["hashbrown", "indexmap", "num-complex", "num-bigint", "smallvec"]

[dependencies.ndarray]
workspace = true
features = ["rayon", "approx"]

[dependencies.approx]
workspace = true
features = ["num-complex"]

[dependencies.hashbrown]
workspace = true
features = ["rayon"]

[dependencies.indexmap]
workspace = true
features = ["rayon"]

[dependencies.faer-ext]
version = "0.3.0"
features = ["ndarray"]

[dependencies.pulp]
version = "0.21.5"
features = ["macro"]

[dev-dependencies]
pyo3 = { workspace = true, features = ["auto-initialize"] }

[features]
cache_pygates = ["qiskit-circuit/cache_pygates"]
