[package]
name = "qiskit-bindgen-c"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[[bin]]
name = "qiskit-bindgen-c"

[dependencies]
qiskit-bindgen.workspace = true
anyhow.workspace = true
clap = { version = "4.5", features = ["derive"] }
