[package]
name = "qiskit-bindgen-c"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[[bin]]
name = "qiskit-bindgen-c"

[dependencies]
qiskit-bindgen.workspace = true
qiskit-cext-vtable  = { workspace = true, features = ["python_binding"] }
anyhow.workspace = true
indexmap.workspace = true
cbindgen.workspace = true
clap = { version = "4.6", features = ["derive"] }
