[package]
name = "qiskit-circuit"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "qiskit_circuit"
doctest = false

[lints]
workspace = true

[dependencies]
rayon.workspace = true
ahash.workspace = true
rustworkx-core.workspace = true
bytemuck.workspace = true
bitfield-struct.workspace = true
num-complex.workspace = true
ndarray.workspace = true
thiserror.workspace = true
approx.workspace = true
itertools.workspace = true
nalgebra.workspace = true
nom.workspace = true
nom-unicode.workspace = true

[dependencies.pyo3]
workspace = true
features = ["hashbrown", "indexmap", "num-complex", "num-bigint", "smallvec", "py-clone"]

[dependencies.hashbrown]
workspace = true
features = ["rayon"]

[dependencies.indexmap]
workspace = true
features = ["rayon"]

[dependencies.smallvec]
workspace = true
features = ["union", "const_generics"]

[dependencies.numpy]
workspace = true
features = ["nalgebra"]

[features]
cache_pygates = []

[dev-dependencies]
pyo3 = { workspace = true, features = ["auto-initialize"] }
