[package]
name = "qiskit-circuit"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "qiskit_circuit"
doctest = false

[lints]
workspace = true

[dependencies]
qiskit-util = { workspace = true, features = ["py"] }
qiskit-quantum-info.workspace = true
rayon.workspace = true
foldhash.workspace = true
rustworkx-core.workspace = true
bytemuck = {workspace = true, features = ["derive"]}
bitfield-struct.workspace = true
num-complex.workspace = true
num-bigint.workspace = true
num-traits.workspace = true
thiserror.workspace = true
itertools.workspace = true
nalgebra.workspace = true
uuid.workspace = true
nom.workspace = true
nom-unicode.workspace = true
nom-language.workspace = true
crossterm = "0.29.0"
unicode-width = "0.2"
ahash = "0.8.12"
unicode-segmentation = "1.13"
lexical-core = "1.0.6"
lexical-write-float = "1.0.6"

[dependencies.pyo3]
workspace = true
features = ["hashbrown", "indexmap", "num-complex", "num-bigint", "smallvec", "py-clone"]

[dependencies.approx]
workspace = true
features = ["num-complex"]

[dependencies.ndarray]
workspace = true
features = ["rayon", "approx"]

[dependencies.hashbrown]
workspace = true
features = ["rayon"]

[dependencies.indexmap]
workspace = true
features = ["rayon"]

[dependencies.smallvec]
workspace = true
features = ["union", "const_generics"]

[dependencies.numpy]
workspace = true
features = ["nalgebra"]

[features]
cache_pygates = []

[dev-dependencies]
pyo3 = { workspace = true, features = ["auto-initialize"] }
