[package]
name = "qiskit-circuit-library"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "qiskit_circuit_library"
doctest = false

[lints]
workspace = true

[dependencies]
qiskit-circuit.workspace = true
rayon.workspace = true
num-complex.workspace = true
nalgebra.workspace = true
uuid.workspace = true
rand.workspace = true
rand_pcg.workspace = true
rand_distr.workspace = true
itertools.workspace = true

[dependencies.pyo3]
workspace = true
features = ["hashbrown", "indexmap", "num-complex", "num-bigint", "smallvec", "py-clone"]

[dependencies.ndarray]
workspace = true
features = ["rayon", "approx"]

[dependencies.hashbrown]
workspace = true
features = ["rayon"]

[dependencies.smallvec]
workspace = true
features = ["union", "const_generics"]

[dependencies.numpy]
workspace = true
features = ["nalgebra"]

[dev-dependencies]
pyo3 = { workspace = true, features = ["auto-initialize"] }
