[package]
name = "qiskit-providers"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "qiskit_providers"

[dependencies]
rustworkx-core.workspace = true
anyhow.workspace = true
num-complex.workspace = true

[dependencies.hashbrown]
workspace = true
features = ["rayon", "serde"]

[lints]
workspace = true

[dependencies.ndarray]
workspace = true
features = ["rayon", "approx"]