[package]
name = "qiskit-providers"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "qiskit_providers"

[dependencies]
anyhow.workspace = true
rustworkx-core.workspace = true
num-complex.workspace = true
thiserror.workspace = true

[dependencies.approx]
workspace = true
features = ["num-complex"]

[dependencies.hashbrown]
workspace = true
features = ["rayon", "serde"]

[lints]
workspace = true

[dependencies.ndarray]
workspace = true
features = ["rayon", "approx"]