[package]
name = "qiskit"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "qiskit"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { workspace = true, features = ["extension-module"] }
qiskit-accelerate.workspace = true
qiskit-circuit.workspace = true
qiskit-qasm2.workspace = true
qiskit-qasm3.workspace = true
