[package]
name = "qiskit-pyext"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "qiskit_pyext"
doctest = false
crate-type = ["cdylib"]

[features]
# We always need to activate PyO3's `extension-module` for this crate to be useful at all, but we
# need it *not* to be active for the tests of other crates to work.  If the feature is active,
# `libpython` is *not* linked, and if the feature isn't present, then it is.  To test the Rust
# crates as standalone binaries, executables, we need `libpython` to be linked in, so we make the
# feature a default, and run `cargo test --no-default-features` to turn it off.
default = ["pyo3/extension-module"]
cache_pygates = ["pyo3/extension-module", "qiskit-circuit/cache_pygates"]

[dependencies]
pyo3.workspace = true
qiskit-accelerate.workspace = true
qiskit-circuit.workspace = true
qiskit-qasm2.workspace = true
qiskit-qasm3.workspace = true
