[package]
name = "qiskit-qasm2"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "qiskit_qasm2"
doctest = false

[dependencies]
num-bigint.workspace = true
hashbrown.workspace = true
pyo3.workspace = true
qiskit-circuit.workspace = true
