[package]
name = "qiskit-qasm3"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "qiskit_qasm3"
doctest = false

[lints]
workspace = true

[dependencies]
indexmap.workspace = true
hashbrown.workspace = true
oq3_semantics = "0.7.0"
oq3_syntax = "0.7.0"
qiskit-circuit.workspace = true
ahash.workspace = true
regex = "1.12"
lazy_static = "1.5"
thiserror.workspace = true

[dependencies.pyo3]
workspace = true
features = ["py-clone"]
