[package]
name = "qiskit-qpy"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true


[lib]
name = "qiskit_qpy"
doctest = false

[lints]
workspace = true

[dependencies]
indexmap.workspace = true
hashbrown.workspace = true
oq3_semantics = "0.7.0"
ahash.workspace = true
qiskit-circuit.workspace = true
binrw = "0.13"
uuid = {version = "1", features = ["v4"]}

[dependencies.pyo3]
workspace = true
features = ["py-clone"]

[dependencies.numpy]
workspace = true
features = ["nalgebra"]
