[package]
name = "qiskit-quantum-info"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "qiskit_quantum_info"
doctest = false

[dependencies]
qiskit-util = { workspace = true }
numpy = { workspace = true, optional = true}
num-complex.workspace = true
num-traits.workspace = true
nalgebra.workspace = true
itertools.workspace = true
rustworkx-core.workspace = true
thiserror.workspace = true
rayon.workspace = true
bytemuck.workspace = true
foldhash.workspace = true
ndarray-einsum = "0.8.0"
rand.workspace = true
rand_pcg.workspace = true
rand_distr.workspace = true
fixedbitset.workspace = true

[dependencies.ndarray]
workspace = true
features = ["rayon", "approx"]

[dependencies.approx]
workspace = true
features = ["num-complex"]

[dependencies.hashbrown]
workspace = true
features = ["rayon"]

[dependencies.pyo3]
workspace = true
optional = true
features = ["hashbrown", "indexmap", "num-complex", "num-bigint", "smallvec"]

[lints]
workspace = true

[features]
python = ["qiskit-util/py", "dep:pyo3", "dep:numpy"]


[dev-dependencies]
qiskit-circuit.workspace = true
