[package]
name = "qiskit-synthesis"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "qiskit_synthesis"
doctest = false

[lints]
workspace = true

[dependencies]
qiskit-circuit.workspace = true
qiskit-quantum-info.workspace = true
bincode = "1.3"
bytemuck.workspace = true
num-complex.workspace = true
nalgebra.workspace = true
ahash.workspace = true
itertools.workspace = true
numpy.workspace = true
rayon.workspace = true
num-traits.workspace = true
rand.workspace = true
rand_pcg.workspace = true
rand_distr.workspace = true
faer = "0.19.4"
rustworkx-core.workspace = true
rustiq-core = "0.0.11"
rstar = "0.12.2"
serde = "1.0.219"
thiserror.workspace = true

[dependencies.faer-ext]
version = "0.3.0"
features = ["ndarray"]

[dependencies.smallvec]
workspace = true
features = ["union"]

[dependencies.pyo3]
workspace = true
features = ["hashbrown", "indexmap", "num-complex", "num-bigint", "smallvec"]

[dependencies.ndarray]
workspace = true
features = ["rayon", "approx"]

[dependencies.approx]
workspace = true
features = ["num-complex"]

[dependencies.hashbrown]
workspace = true
features = ["rayon", "serde"]

[dependencies.indexmap]
workspace = true
features = ["rayon"]

[dev-dependencies]
pyo3 = { workspace = true, features = ["auto-initialize"] }
