[package]
name = "qiskit-synthesis"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "qiskit_synthesis"
doctest = false

[lints]
workspace = true

[dependencies]
qiskit-circuit.workspace = true
qiskit-quantum-info.workspace = true
bytemuck.workspace = true
num-complex.workspace = true
nalgebra.workspace = true
ahash.workspace = true
itertools.workspace = true
numpy.workspace = true
rayon.workspace = true
num-traits.workspace = true
rand.workspace = true
rand_pcg.workspace = true
rand_distr.workspace = true
faer = "0.23.2"
rustworkx-core.workspace = true
rustiq-core = "0.0.11"
rsgridsynth =  "0.2.0"
rstar = "0.12.2"
serde = { version = "1.0", features = ["derive"] }
thiserror.workspace = true

# `bincode` is a dead project and needs replacement.  The development
# process ended acrimoniously with the developer rewriting git history
# and releasing poisoned versions to crates.io.  This is an increased
# risk of further broken/malicious releases, so we hard-pin to a known
# good version.
bincode = "=1.3.3"

[dependencies.faer-ext]
version = "0.7.1"
features = ["ndarray"]

[dependencies.smallvec]
workspace = true
features = ["union"]

[dependencies.pyo3]
workspace = true
features = ["hashbrown", "indexmap", "num-complex", "num-bigint", "smallvec"]

[dependencies.ndarray]
workspace = true
features = ["rayon", "approx"]

[dependencies.approx]
workspace = true
features = ["num-complex"]

[dependencies.hashbrown]
workspace = true
features = ["rayon", "serde"]

[dependencies.indexmap]
workspace = true
features = ["rayon"]

[dev-dependencies]
pyo3 = { workspace = true, features = ["auto-initialize"] }

[features]
cache_pygates = ["qiskit-circuit/cache_pygates"]
